hacksoft/static/sass/main.scss
/* ... */
.technologies-panda {
  position: absolute;
  left: -150px;
  @media screen and (max-width: 1550px){
    display: none;
  }
}

.footer-panda {
  text-align: center;
}

.box-container {
  display: flex;


  .client-box {
    position:relative;
    width: 33%;
    cursor: pointer;
    text-align: center;

    &:before {
      height:100%;
      content: "";
      display: inline-block;
      vertical-align: middle;
    }

    .box-logo {
      margin:auto;
      max-width: 80%;
      max-height:50%;
      vertical-align: middle;
    }
  }
}

.blog-posts-container {
    display: flex;
    flex-wrap: wrap;
}

.featured-article {
    position:relative;
    z-index:1;
    margin-bottom:40px;
}
.blog-post-section-heading {
    text-align: center;
    font-weight: normal;
    font-size: 1.5em;
    margin-bottom: 5px;
    font-family: 'Open Sans', serif;
    text-transform: uppercase;
}
.blog-post-container {
    width: 33%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
    padding:10px;

    @media screen and (max-width: 1300px){
        width:50%;
    }
    @media screen and (max-width: 767px){
        width:100%;
    }
    &.featured-blog-post {
        width:100%;
        &:before {
            content:"";
            display:block;
            background-color:#efefef;
            position:absolute;
            left:-5vw;
            width:100vw;
            height:105%;
            margin-top:-70px;
            z-index:-1;
            @media screen and (min-width: 2560px) and (max-width: 1440px) {
                height:120%;
            }
        }
    }
    &.featured-blog-post .blog-post {
        background-color: white;
        display:flex;

        @media screen and (max-width: 768px) {
            flex-direction:column;
            padding:20px;
        }
        @media screen and (max-width: 425px) {
            padding:10px;
        }
        .head-image {
            min-height: 300px;
            height:auto;
            width:60%;
            @media screen and (max-width: 768px) {
                width:auto;
            }
            @media screen and (max-width: 425px) {
                height:190px;
                min-height:initial;
            }
        }
        .blog-post-body {
            padding:0 20px;
            width: 40%;
            @media screen and (max-width: 768px) {
                width:auto;
                padding:0px;
            }
            .responsive-author-images {
                display:none;
                @media screen and (max-width: 425px) {
                    display:block;
                }
                .avatar {
                    float:right;
                    margin:-35px 5px 0 0;
                    @media screen and (max-width: 425px) {
                        display:block;
                    }
                }
            }

            .title {
                font-size: 30px;
            }
            .description {
                position:relative;
                padding-bottom:20px;
                @media screen and (max-width:425px) {
                    padding-bottom:30px;
                }
            }
            .author:after {
                margin:0 10px;
            }
            .avatar {
                @media screen and (max-width: 425px) {
                    display:none;
                }
                margin:0;
                float:none;
            }
            .author-name {
                display:inline-block;
            }
        }
    }
    .blog-post {
        box-shadow: 0px 10px 15px #ababab;
        padding: 10px;
        margin: 10px 5px 15px 5px;
        padding-bottom: 20px;
        height: 100%;
        box-sizing: border-box;
        position:relative;

        .head-image {
            width: 100%;
            height: 190px;
            background-position: center;
            background-size: cover;
        }
        .blog-post-body {
            padding:10px;
            .title {
                font-size: 24px;
                font-weight: bold;
            }
            .description {

            }

            .date {
              color:silver;
              text-align: right;
              padding-top:10px;
              position: absolute;
              bottom: 10px;
              right: 20px;
              span {
                font-size: 16px;
              }
            }
        }
        .avatar {
          width:70px;
          height:70px;
          background-position:center;
          background-size:cover;
          border-radius:50%;
          float:right;
          margin:-35px 5px 0 0;
          @media screen and (max-width: 320px){
            margin:-27px 5px 0 0;
            width:50px;
            height:50px;
          }
        }
        .authors {
          font-weight: bold;
          margin:10px 0;
          .author {
            display:inline-block;
            &:after {
              content: "&";
              font-size: 20px;
              font-weight: bold;
              display:inline-block;
              color:#ff8400;
              margin:0 1px;
            }
            &:last-child:after{
                display: none;
            }
          }
        }
    }
}
.contact-authors {
    padding: 20px 0 20px 0;
    font-size: 19px;
    font-weight: bold;
}

.subscribe {
  margin-top: 1em;

  .subscribe-form {
    margin: 0 auto;
  }
}

.footer-subscribe {
  float: right;
  padding-bottom: 10px;
}
/* ... */

